# pyrite

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  KnowledgeClaw-Spec.md  LICENSE  MANIFEST.in  MCP_SUBMISSION.md  README.md  SECURITY.md  UPSTREAM_CHANGES.md  claude_desktop_config.json  config.example.yaml  docker-compose.prod.yml  docker-compose.yml  fly.toml  mcp-requirements.txt  pyproject.toml  railway.json  render.yaml  requirements.txt  ui_streamlit.py
.claude-plugin/: plugin.json  plugin.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: corpus.py  run_all.py
deploy/: start.sh
deploy/demo/: Caddyfile  Caddyfile.Dockerfile  docker-compose.yml  seed.sh  setup-server.sh  update.sh
docs/: ARCHITECTURE.md  DESIGN.md  MCP_INTEGRATION.md  MCP_SETUP.md  ROADMAP.md  SPECS.md  USER_GUIDE.md  USE_CASES.md  VISION.md  gemini-mcp-integration.md  getting-started.md  openai-mcp-integration.md  plugins.md
extensions/cascade/: pyproject.toml
extensions/cascade/src/pyrite_cascade/: __init__.py  aliases.py  cli.py  entry_types.py  extract_actors.py  hooks.py  migration.py  plugin.py  static_export.py
extensions/cascade/tests/: test_actor_resolution.py  test_aliases.py  test_cascade_delegation.py  test_cascade_ji_compat.py  test_cascade_ji_inheritance.py  test_cascade_migration.py  test_cascade_types.py  test_extract_actors.py  test_static_export.py
extensions/encyclopedia/: pyproject.toml
extensions/encyclopedia/src/pyrite_encyclopedia/: __init__.py  cli.py  entry_types.py  plugin.py  preset.py  tables.py  validators.py  workflows.py
extensions/encyclopedia/tests/: test_encyclopedia.py
extensions/journalism-investigation/: pyproject.toml
extensions/journalism-investigation/src/pyrite_journalism_investigation/: __init__.py  bulk.py  cli.py  cross_kb_search.py  dedup.py  entry_types.py  export.py  ftm.py  hooks.py  investigation_setup.py  known_entities.py  money_flow.py  ownership.py  plugin.py  preset.py  promote.py  qa.py  queries.py  reliability.py  utils.py  validators.py
extensions/journalism-investigation/tests/: test_auto_links.py  test_bulk_edges.py  test_claim_entry.py  test_cli.py  test_connection_types.py  test_cross_kb_search.py  test_dedup.py  test_entity_types.py  test_event_types.py  test_evidence_entry.py  test_export_pack.py  test_ftm.py  test_investigation_setup.py  test_known_entities.py  test_mcp_optimization.py  test_mcp_tools.py  test_mcp_write_integration.py  test_money_flow.py  test_ownership_chains.py  test_plugin.py  test_preset.py  test_promote_claim.py  test_qa_report.py  test_source_reliability.py  test_validators.py
extensions/social/: pyproject.toml
extensions/social/src/pyrite_social/: __init__.py  cli.py  entry_types.py  hooks.py  plugin.py  preset.py  tables.py  validators.py
extensions/social/tests/: test_social.py
extensions/software-kb/: pyproject.toml
extensions/software-kb/src/pyrite_software_kb/: __init__.py  board.py  cli.py  entry_types.py  plugin.py  preset.py  validators.py  workflows.py
extensions/software-kb/tests/: test_software_kb.py
extensions/task/: pyproject.toml
extensions/task/src/pyrite_task/: __init__.py  cli.py  entry_types.py  plugin.py  preset.py  service.py  validators.py  workflows.py
extensions/task/tests/: test_task.py  test_task_service.py
extensions/zettelkasten/: pyproject.toml
extensions/zettelkasten/src/pyrite_zettelkasten/: __init__.py  cli.py  entry_types.py  plugin.py  preset.py  validators.py
extensions/zettelkasten/tests/: test_zettelkasten.py
kb/: authenticated-mcp-endpoint-for-remote-access.md  background-embedding-worker.md  bug-kb-update-mcp-tool-returns-posixpath-serialization-error.md  byok-api-key-management-for-multi-user-deployments.md  community-feature-request-system-via-pyrite-kb.md  coordination-task-plugin.md  entry-lifecycle-field-and-search-filtering.md  epic-journalists-pyrite-wiki-hosted-research-platform-for-independent-journalists.md  epic-web-ui-orchestration-multi-agent-research-workflows-in-the-browser.md  founding-design-principles-why-markdown-yaml-in-git.md  git-service.md  hosted-instance-infrastructure-for-journalists-pyrite-wiki.md  journalist-onboarding-flow-and-kb-orientation.md  kb-compaction-and-entry-lifecycle.md  kb-compaction-command-and-freshness-qa-rules.md  kb-packaging-and-distribution-for-pre-populated-research-kbs.md  kb.yaml  research-workflow-templates-for-journalist-use-cases.md  roadmap.md  search-relevance-boost-by-entry-type.md
pyrite/: __init__.py  admin_cli.py  config.py  exceptions.py  github_auth.py  logging.py  migrations.py  read_cli.py  schema.py  write_cli.py
pyrite-mcp/: README.md  pyproject.toml
pyrite-mcp/pyrite_mcp/: __init__.py  __main__.py
scripts/: check_import_cycles.py  conflict_analysis.py  cross_reference_appointees.py  import_appointees.py  scrape_appointee_details.py
tests/: __init__.py  conftest.py  test_admin_cli.py  test_agent_cli.py  test_ai_endpoints.py  test_api_security.py  test_api_state_isolation.py  test_api_tiers.py  test_api_wikilinks.py  test_auth_endpoints.py  test_auth_service.py  test_auth_service_oauth.py  test_block_extraction.py  test_block_refs.py  test_blocks_api.py  test_branding_endpoints.py  test_branding_service.py  test_ci_command.py  test_cli_commands.py  test_cli_field_parsing.py  test_cli_json_output.py  test_collaboration_integration.py  test_collaboration_models.py  test_collection_export.py  test_collection_query.py  test_collection_views.py  test_collections.py  test_collections_plugin.py  test_config.py  test_container.py  test_cross_kb_links.py  test_crud_orm.py  test_db_backup.py  test_db_transaction.py  test_document_manager.py  test_edge_endpoint.py  test_edge_endpoint_queries.py  test_edge_endpoint_sync.py  test_edge_endpoint_validation.py  test_embedding.py  (+122 more)
web/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
(+1339 files in other folders)
