[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrite"
version = "0.2.0"
description = "Knowledge-as-Code for you and your agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["knowledge-base", "knowledge-management", "mcp", "ai", "knowledge-graph", "agent-memory", "zettelkasten"]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.11.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
    "ruamel.yaml>=0.18.0",
    "typer[all]>=0.12.3",
    "rich>=13.7.1",
    "watchdog>=4.0.1",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "slowapi>=0.1.9",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.30.0",
    "anthropic>=0.30.0",
]
ui = [
    "streamlit>=1.34.0",
    "streamlit-agraph>=0.0.45",
]
semantic = [
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
]
all = [
    "pyrite[ai,ui,semantic,dev]",
]

[project.scripts]
pyrite = "pyrite.write_cli:main"
pyrite-read = "pyrite.read_cli:main"
pyrite-admin = "pyrite.admin_cli:main"
pyrite-server = "pyrite.server.api:main"
pyrite-ui = "pyrite.ui.run:main"

[project.urls]
Homepage = "https://github.com/markramm/pyrite"
Documentation = "https://github.com/markramm/pyrite#readme"
Repository = "https://github.com/markramm/pyrite"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrite*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: tests requiring full environment setup (DB, indexing, network)",
    "api: REST API endpoint tests",
    "mcp: MCP server protocol tests",
    "cli: CLI command tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Function call in argument defaults (standard Typer pattern)
    "B904",  # raise-without-from in except (typer.Exit doesn't chain)
    "E741",  # Ambiguous variable name (l for link is clear in context)
    "N802",  # Function name should be lowercase (do_GET is HTTP convention)
]

[tool.ruff.lint.per-file-ignores]
# Test files can have unused assignments for clarity
# E402: importorskip must precede the conditional imports
"tests/*" = ["F841", "E402"]
