[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrite"
version = "0.3.0"
description = "Knowledge-as-Code for you and your agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["knowledge-base", "knowledge-management", "mcp", "ai", "knowledge-graph", "agent-memory", "zettelkasten"]

dependencies = [
    "pydantic>=2.11.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
    "ruamel.yaml>=0.18.0",
    "SQLAlchemy>=2.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "watchdog>=4.0.1",
    "alembic>=1.13.0",
    "markdownify>=0.14.1",
]
cli = [
    "typer[all]>=0.12.3",
    "rich>=13.7.1",
]
ai = [
    "openai>=1.30.0",
    "anthropic>=0.30.0",
]
semantic = [
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
]
all = [
    "pyrite[server,cli,ai,semantic,dev]",
]

[project.scripts]
pyrite = "pyrite.cli:main"
pyrite-read = "pyrite.read_cli:main"
pyrite-admin = "pyrite.admin_cli:main"
pyrite-server = "pyrite.server.api:main"

[project.urls]
Homepage = "https://github.com/markramm/pyrite"
Documentation = "https://github.com/markramm/pyrite#readme"
Repository = "https://github.com/markramm/pyrite"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrite*"]

[tool.pytest.ini_options]
testpaths = ["tests", "extensions"]
python_files = ["test_*.py"]
addopts = "-v --tb=short -m 'not slow'"
markers = [
    "integration: tests requiring full environment setup (DB, indexing, network)",
    "api: REST API endpoint tests",
    "mcp: MCP server protocol tests",
    "cli: CLI command tests",
    "slow: long-running performance tests (1000+ entries)",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Function call in argument defaults (standard Typer pattern)
    "B904",  # raise-without-from in except (typer.Exit doesn't chain)
    "E741",  # Ambiguous variable name (l for link is clear in context)
    "N802",  # Function name should be lowercase (do_GET is HTTP convention)
]

[tool.ruff.lint.per-file-ignores]
# Test files can have unused assignments for clarity
# E402: importorskip must precede the conditional imports
"tests/*" = ["F841", "E402"]
