[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrite-cascade"
version = "0.1.0"
description = "Cascade Series investigative journalism extension for pyrite"
requires-python = ">=3.11"
dependencies = []  # pyrite is a peer dependency, installed separately

[project.entry-points."pyrite.plugins"]
cascade = "pyrite_cascade.plugin:CascadePlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrite_cascade"]
