[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrite-encyclopedia"
version = "0.1.0"
description = "Wikipedia-inspired collaborative encyclopedia extension for pyrite"
requires-python = ">=3.11"
dependencies = []  # pyrite is a peer dependency, installed separately

[project.entry-points."pyrite.plugins"]
encyclopedia = "pyrite_encyclopedia.plugin:EncyclopediaPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrite_encyclopedia"]
