[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrite-journalism-investigation"
version = "0.1.0"
description = "Journalism investigation extension for pyrite — entity, event, and connection types for investigative research"
requires-python = ">=3.11"
dependencies = []  # pyrite is a peer dependency, installed separately

[project.entry-points."pyrite.plugins"]
journalism_investigation = "pyrite_journalism_investigation.plugin:JournalismInvestigationPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrite_journalism_investigation"]
