[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrite-social"
version = "0.1.0"
description = "Everything2-inspired social knowledge base extension for pyrite"
requires-python = ">=3.11"
dependencies = []  # pyrite is a peer dependency, installed separately

[project.entry-points."pyrite.plugins"]
social = "pyrite_social.plugin:SocialPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrite_social"]
