[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrite-software-kb"
version = "0.1.0"
description = "Software team knowledge base extension for pyrite (ADRs, design docs, standards, components, backlog, runbooks)"
requires-python = ">=3.11"
dependencies = []  # pyrite is a peer dependency, installed separately

[project.entry-points."pyrite.plugins"]
software_kb = "pyrite_software_kb.plugin:SoftwareKBPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrite_software_kb"]
