[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrite-zettelkasten"
version = "0.1.0"
description = "Zettelkasten personal knowledge management extension for pyrite"
requires-python = ">=3.11"
dependencies = []  # pyrite is a peer dependency, installed separately

[project.entry-points."pyrite.plugins"]
zettelkasten = "pyrite_zettelkasten.plugin:ZettelkastenPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrite_zettelkasten"]
